css/style_seishunmk1.css
body, html {
    overflow-y: hidden;
    height: 100%;
}

#header {
    position: absolute;
    z-index: 10;
    mix-blend-mode: difference;
    top: 0;
    left: 0;
    width: 100vw;
    height: 12vh;
    display: flex;
    align-items: center;
}

#focus {
    position: relative;
    height: 100vh;
    display: flex;
    flex-direction: column;
    z-index: -10;
}

#focus img{
    max-width: 100vh;
    max-width: 100vw;
}

#title {
    position: absolute;
    bottom: 20vh;
    left: 10vw;
}

#title * {
    color: rgb(255, 255, 255);
    mix-blend-mode: difference;
    word-wrap: break-word;
    overflow-wrap: break-word;
    white-space: normal;
    line-height: 1.2;
    z-index: 10;
    margin: 0;
    position: relative;
    text-shadow: 
        0px 0px 2px black,   
        0px 0px 1px black,   
        0px 0px 1px black,   
        0px 0px 1px black,   
        0px 0px 1px black;
}

